--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juanita XV añoa</title>
+    <title>Juanita XV años</title>
     <link rel="icon" type="favicon/x-icon" href="src/logo.jpg">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header id="header">
+        <h1>Jaunita Bordallo XV</h1>
+        <ul>
+            <li><a href="#">Invitacion</a></li>
+            <li><a href="#">Asistencia</a></li>
+            <li><a href="#">Lugar</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </header>
+    <main id="container">
+        
+        <section id="invitacion">
+            <div id="frase">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, nisi. Sunt expedita odio natus modi odit qui dignissimos itaque consectetur. Quo facere cupiditate architecto ipsa, dolorem ea officia animi qui?</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
