--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
             <li><a href="#">Contacto</a></li>
         </ul>
     </header>
+    <img id="rosas1" src="src/rosas1.png" alt="">
+    <img id="rosas2" src="src/rosas2.png" alt="">
+    <img id="rosas3" src="src/rosas2.png" alt="">
+
     <main id="container">
-        
+
         <section id="invitacion">
             <div id="frase">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, nisi. Sunt expedita odio natus modi odit qui dignissimos itaque consectetur. Quo facere cupiditate architecto ipsa, dolorem ea officia animi qui?</p>
+                <h3>"Hay momentos inolvidables que se atesoran en el corazón para siempre, por esa razón, quiero que compartas conmigo éste día tan especial: Mis 15 Años."</h3>
             </div>
         </section>
     </main>
