--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juanita XV años</title>
-    <link rel="icon" type="favicon/x-icon" href="src/logo.jpg">
+    <link rel="icon" type="favicon/x-icon" href="src/rosas1.png">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header id="header">
         <h1>Jaunita Bordallo XV</h1>
@@ -25,10 +27,52 @@
     <main id="container">
 
         <section id="invitacion">
+
             <div id="frase">
-                <h3>"Hay momentos inolvidables que se atesoran en el corazón para siempre, por esa razón, quiero que compartas conmigo éste día tan especial: Mis 15 Años."</h3>
+                <h3>"Hay momentos inolvidables que se atesoran en el corazón para siempre, por esa razón, quiero que
+                    compartas conmigo éste día tan especial: <br>Mis 15 Años."</h3>
+            </div>
+            <div id="nombre">
+                <h1>Diana Juanita Bordallo Rodríguez</h1>
+            </div>
+            <div id="padres">
+                <p>Con la vendicion de Dios y de mis padres...</p>
+                <h3>Lorena Rodríguez Mercado</h3>
+                <h3>Fredy Enrique Bordallo Chavarria</h3>
+            </div>
+            <div id="datos">
+                <p>Sera un placer compartir con tigo este feliz acontecimiento</p>
+
+                <h3>12 de Mayo del 2022</h3>
+            </div>
+
+            <div id="datos2">
+                <div class="dato">
+                    <img src="src/iglesia.png" alt="">
+                    <p>
+                    Misa parroquia san Jose 7:00 pm
+                    </p>
+                </div>
+                <div class="dato">
+                    <p>
+                        Celebracion en Salon el Candil 8:30 pm
+                    </p>
+                </div>
+                <div class="dato">
+                    <img src="src/cena.png" alt="">
+                    <p>
+                    Cena de 9:00 pm - 10:00 pm
+                    </p>
+                </div>
+                <div class="dato">
+                    <img src="" alt="regalo">
+                    <p>
+                        
+                    </p>
+                </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
