--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                     <p>
                     Misa parroquia san Jose 7:00 pm
                     </p>
-                    <a href="#">Ver ubicacion</a>
+                    <a href="javascript:void(0);" id="scrollBottom2">Ver ubicacion</a>
                 </div>
                 <div class="dato">
                     <img src="src/fiesta.png" alt="">
                     <p>
                         Celebracion en Salon el Candil 8:30 pm
                     </p>
-                    <a href="#">Ver ubicacion</a>
+                    <a href="javascript:void(0);" id="scrollBottom3">Ver ubicacion</a>
                 </div>
                 <div class="dato">
                     <img src="src/cena.png" alt="">
                     <p>
                     Cena de 9:00 pm - 10:00 pm
                     </p>
-                    <a href="#">Ver ubicacion</a>
+                    <a href="javascript:void(0);" id="scrollBottom4">Ver ubicacion</a>
 
                 </div>
                 <div class="dato">
@@ -93,8 +93,20 @@
         </section>
 
         <section id="ubicacion">
-
+            <h2>Ubicaciones</h2>
+            <div id="cartas">
+                <div class="carta">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3478.2827212641237!2d-100.96665938453903!3d29.332709058795714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86f5954c7b619413%3A0x2a8b3868dcc3aa2c!2sParroquia%20San%20Jos%C3%A9!5e0!3m2!1ses-419!2smx!4v1644622258735!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <h3>Parroquia San Jose</h3>
+                </div>
+                <div class="carta">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3478.6266018612623!2d-100.9347655845392!3d29.32262685926204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86f594d920f8f4c3%3A0x87143f099ab1ac20!2sEl%20Candil!5e0!3m2!1ses-419!2smx!4v1644622324608!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <h3>Salon "El Candil"</h3>
+                </div>
+            </div>
+            
         </section>
+
         <footer id="footer">
             <h3>Dante Portales - Web Design &copy;</h3>
         </footer>
