--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </section>
         
-        <a href="#conf-asitencia"><button id="conf-asitencia">
+        <a href="javascript:void(0);" id="scrollasistencia2"><button id="conf-asitencia">
             ¿Nos acompañaras?
         </button></a>
 
