--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Juanita XV años</title>
     <link rel="icon" type="favicon/x-icon" href="src/rosas1.png">
     <link rel="stylesheet" href="styles/style.css">
@@ -43,7 +43,7 @@
             <div id="datos">
                 <p>Sera un placer compartir con tigo este feliz acontecimiento</p>
 
-                <h3>12 de Mayo del 2022</h3>
+                <h3>12 de Marzo del 2022</h3>
             </div>
 
             <div id="datos2">
